[package]
name = "transaction-challenge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
serde = { version = "1.0.172", features = ["derive"] }
anyhow = "1.0.81"
clap = { version = "4", features = ["derive"] }
insta = " 1.36.1"